Closed Bug 617446 Opened 14 years ago Closed 14 years ago

libmime: mimeEncryptedClass (and also some other classes) are not exposed via XPCOM

Categories

(MailNews Core :: MIME, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.3a2

People

(Reporter: stnsls, Assigned: stnsls)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1.15) Gecko/20101028 Iceweasel/3.5.15 (like Firefox/3.5.15)
Build Identifier: comm-central, comm-1.9.2

As I was trying to create a new content-type handler, I found myself modifying the code of Thunderbird so that nsIMimeObjectClassAccess does expose the mimeEncryptedClass singleton. I suspect some other classes are missing there too. The modification is trivial, and it actually works. It's all about adding a few methods/functions here:

M mailnews/mime/public/nsIMimeObjectClassAccess.h
M mailnews/mime/src/mimecom.cpp
M mailnews/mime/src/mimecom.h
M mailnews/mime/src/mimecth.cpp
M mailnews/mime/src/mimecth.h
M mailnews/mime/src/nsMimeObjectClassAccess.cpp
M mailnews/mime/src/nsMimeObjectClassAccess.h

I think this would greatly benefit extensions like, for example, Enigmail.

Reproducible: Always
Also, some more missing classes could be added to the interface.
Assignee: nobody → stnsls
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #495982 - Flags: review?(bienvenu)
Comment on attachment 495982 [details] [diff] [review]
hg diff -p -b -U 8

looks ok, thx for the patch.
Attachment #495982 - Flags: review?(bienvenu) → review+
Comment on attachment 495982 [details] [diff] [review]
hg diff -p -b -U 8

Strictly speaking, the nsIMimeObjectClassAccess change is an interface change and therefore requires superreview.

However, as I'm here, I'll grant sr straight away.
Attachment #495982 - Flags: superreview+
Checked in: http://hg.mozilla.org/comm-central/rev/05b243629360
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: