Bug 617446 - libmime: mimeEncryptedClass (and also some other classes) are not exposed via XPCOM; r=bienvenu sr=Standard8