mailnews/mime/src/mimecom.h
@@ -63,6 +63,7 @@ extern "C" void *XPCOM_GetmimeObjectClass(void);
 extern "C" void *XPCOM_GetmimeContainerClass(void);
 extern "C" void *XPCOM_GetmimeMultipartClass(void);
 extern "C" void *XPCOM_GetmimeMultipartSignedClass(void);
+extern "C" void *XPCOM_GetmimeEncryptedClass(void);
 
 extern "C" void *XPCOM_Mime_create(char *content_type, void* hdrs, void* opts);
 
